[project]
name = "agent-triage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "flake8>=7.3.0",
    "google-adk[extensions]>=1.28.0",
    "google-generativeai>=0.8.6",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "redis>=7.4.0",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "types-redis>=4.6.0.20241004",
]

[tool.ruff]
line-length = 130
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["D100"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
